# dune-gdt

./: .CMakePresets.json.in  .clang-format  .clang-format-3.7  .clang-format-3.8  .clang-format-3.9  .clang-format-8  .clang-tidy  .cmake_format.py  .codecov.yml  .coderabbit.yaml  .deepsource.toml  .dockerignore  .env  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .pylicense-cpp.py  .pylicense-md.py  .pylicense-other.py  .style.yapf  .travis.yml  .yamlfmt  .yapfignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  azure-job-template.yml  build_interactive_bindings_venv.sh  config  config.h.cmake  docker-compose.yml  dune-gdt.pc.in  dune.module  gitlab-job-template.yml  make_docker_wheels.bash  make_env_file.py  (+11 more)
benchmarks/: CMakeLists.txt  assembly_kernels__continuous_lagrange.cpp  assembly_kernels__sipdg.cpp  benchmark_common.hh  burgers__1d__explicit__fv.cpp  stationary_heat_equation__ESV2007.cpp  stokes__taylorhood.cpp
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxylocal
dune/: CMakeLists.txt  gmsh_2d_simplices.msh
dune/gdt/: CMakeLists.txt  exceptions.hh  interpolations.hh  norms.hh  print.hh  products.hh  prolongations.hh  type_traits.hh
dune/gdt/algorithms/: newton.hh
dune/gdt/data/: burgers.hh  stationary_heat_equation.hh  stokes.hh
dune/gdt/discretefunction/: bochner.hh  default-datahandle.hh  default.hh  dof-vector.hh  reinterpret.hh
dune/gdt/functionals/: interfaces.hh  l2.hh  localizable-functional.hh  vector-based.hh
dune/gdt/interpolations/: boundary.hh  default.hh  raviart-thomas.hh
dune/gdt/local/: discretefunction.hh  dof-vector.hh
dune/gdt/local/assembler/: bilinear-form-assemblers.hh  functional-accumulators.hh  functional-assemblers.hh  operator-fd-jacobian-assemblers.hh
dune/gdt/local/bilinear-forms/: generic.hh  integrals.hh  (+2 more)
dune/gdt/operators/: advection-dg.hh  advection-fv.hh  advection-with-reconstruction.hh  bilinear-form.hh  constant.hh  forward-operator.hh  identity.hh  interfaces.hh  laplace-ipdg-flux-reconstruction.hh  lincomb.hh  matrix.hh  operator.hh  oswald-interpolation.hh
dune/gdt/spaces/: bochner.hh  interface.hh  shared-core.hh
dune/gdt/test/: CMakeLists.txt  grids.py
dune/gdt/tools/: adaptation-helper.hh  dirichlet-constraints.hh  discretevalued-grid-function.hh  doerfler-marking.hh  euler.hh  grid-quality-estimates.hh  hyperbolic.hh  local-mass-matrix.hh  sparsity-pattern.hh
dune/pybindxi/: CMakeLists.txt  disable_pybindxi_warnings.sh  interpreter.cc  interpreter.hh
dune/xt/: CMakeLists.txt
dune/xt/common/: CMakeLists.txt  algorithm.hh  bisect.cc  bisect.hh  cblas.cc  cblas.hh  color.cc  color.hh  compiler.hh  configuration.cc  configuration.hh  convergence-study.cc  convergence-study.hh  crtp.hh  debug.hh  densevector.hh  disable_warnings.hh  exceptions.cc  exceptions.hh  filesystem.cc  filesystem.hh  fix-ambiguous-std-math-overloads.cc  fix-ambiguous-std-math-overloads.hh  fixed_map.hh  float_cmp.hh  float_cmp_generated.hxx  float_cmp_internal.hh  float_cmp_style.hh  fmatrix-2.6.hh  fmatrix-2.7.hh  fmatrix.hh  fvector-2.6.hh  fvector-2.7.hh  fvector.hh  interpreter.hh  lapacke.cc  lapacke.hh  localization-study.cc  localization-study.hh  logging.cc  (+38 more)
dune/xt/functions/: CMakeLists.txt  ESV2007.hh  checkerboard.hh  constant.hh  derivatives.hh  elementwise-diameter.hh  elementwise-minimum.hh  exceptions.hh  expression.hh  flattop.hh  grid-function.hh  indicator.hh  inverse.hh  print.hh  type_traits.hh  visualization.hh
dune/xt/grid/: CMakeLists.txt  bound-object.hh  boundaryinfo.hh  capabilities.hh  element.hh  entity.hh  exceptions.hh  filters.hh  gridprovider.hh  grids.hh  information.hh  integrals.hh  intersection.hh  layers.hh  mapper.hh  print.hh  search.hh  structuredgridfactory.hh  type_traits.hh  walker.hh
dune/xt/la/: CMakeLists.txt  algorithms.hh  container.hh  eigen-solver.hh  exceptions.hh  generalized-eigen-solver.hh  matrix-inverter.hh  print.hh  solver.hh  type_traits.hh
dune/xt/test/: .gitignore  CMakeLists.txt  common.cxx  common.hh  main.hxx
python/: CMakeLists.txt  ruff.toml  setup.py.in  update_lockfiles.py
python/dune/gdt/: _version.py.in
python/dune/xt/: _version.py.in
python/gdt/: CMakeLists.txt  dunegdtusercode.cc  hatch_build.py  pyproject.toml  setup.cfg  setup.py  setup.py.in
python/gdt/dune/: CMakeLists.txt
python/gdt/test/: conftest.py  segfault_laplace_integrand.py  test_basic.py  test_bilinear_form_apply2.py  test_hatch_build.py  test_hypothesis_bilinear_form_intersection.py  test_hypothesis_bochner.py  test_hypothesis_dirichlet_constraints.py  test_hypothesis_euler_tools.py  test_hypothesis_grid_quality.py  test_hypothesis_hyperbolic_operators.py  test_hypothesis_interpolation.py  test_hypothesis_mixed_grids.py  test_hypothesis_operator_arithmetic.py  test_hypothesis_operator_interface.py  test_hypothesis_operator_local.py  test_hypothesis_operators.py  test_hypothesis_spaces.py  test_version.py
python/xt/: CMakeLists.txt  LICENSE.txt  README.md  dunextusercode.cc  hatch_build.py  pyproject.toml  setup.py  setup.py.in
python/xt/dune/: CMakeLists.txt  __init__.py
python/xt/scripts/: dxt_code_generation.py  generate_compare_functions.py
python/xt/test/: base.py  common_mpi.py  conftest.py  functions_constant.py  grid_boundary_info.py  grid_intersection.py  grid_provider_cube.py  grid_traits.py  grid_walker.py  test_base.py  test_cmake.py  test_codegen.py  test_common_config.py  test_dune_xt_execute.py  test_dxt_code_generation.py  test_generate_compare_functions.py  test_grid_types.py  test_hatch_build.py  test_hypothesis_functions.py  test_hypothesis_grid_boundary_detector.py  test_hypothesis_grid_provider.py  test_hypothesis_la_complex_container.py  test_hypothesis_la_container.py  test_hypothesis_la_eigensolver.py  test_hypothesis_la_generalized_eigensolver.py  test_hypothesis_la_matrix.py  test_hypothesis_la_matrix_inverter.py  test_hypothesis_la_solver.py  test_hypothesis_strategies.py  test_timings.py  test_vtk_reader.py
python/xt/wrapper/: CMakeLists.txt  __init__.py  dune_xt_execute.py
(+1638 files in other folders)
